--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ pin-project-lite = "=0.2"
 pkcs8 = { version = "=0.10", features = ["encryption", "pkcs5"] }
 pyo3 = { version = "=0.25", features = ["anyhow", "extension-module", "generate-import-lib"] }
 pyo3-log = "=0.12"
+rustls = { version = "0.23.30", features = ["ring", "tls12"] }
 rustls-pemfile = "2.2"
 socket2 = { version = "=0.6", features = ["all"] }
 sysinfo = "=0.36"
